--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -1,12 +1,18 @@
 <html>
     <head>
-        <link rel="stylesheet" href="todo.css">
+      <title>Lobby of Todo</title>
+      <link rel = "icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
+      <%- include('todocss.ejs'); %>
     </head>
     <body>
-      <h1> Todo list </h1>
-      <button type="submit" id="addTask">
-        <h1>Add task</h1>
-      </button>
+      <ul>
+        <ul>
+          <h1> Todo list </h1>
+          <button type="submit" id="addTask">
+            <img src="https://i.ibb.co/TTfdZpc/plus.png" border="0" width="50" height="50">
+            <h2>Add task</h2>
+          </button>
+        </ul>
+      </ul>
      </body>
 </html>
-ß
