--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -1,18 +1,17 @@
 <html>
-    <head>
-      <title>Lobby of Todo</title>
-      <link rel = "icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
-      <%- include('todocss.ejs'); %>
-    </head>
-    <body>
-      <ul>
-        <ul>
-          <h1> Todo list </h1>
+  <head>
+    <title>Lobby of Todo</title>
+    <link rel = "icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
+    <%- include('todocss.ejs'); %>
+  </head>
+  <body>
+        <h1> Todo </h1>
+
+        <ul>       
           <button type="submit" id="addTask">
             <img src="https://i.ibb.co/TTfdZpc/plus.png" border="0" width="50" height="50">
             <h2>Add task</h2>
           </button>
         </ul>
-      </ul>
-     </body>
+    </body>
 </html>
