--- a/express-todo/lobby/lobby.ejs
+++ b/express-todo/lobby/lobby.ejs
@@ -1,12 +1,11 @@
 <html>
   <head>
-    <title>Lobby of Todo</title>
+    <title>Lobby for Todo</title>
     <link rel = "icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
-    <%- include('assetslobby.ejs'); %>
+    <%- include("assetslobby.ejs") %>
   </head>
   <body>
-    <form class="box" action="/redirect" method="POST">
-      <button class="button" >
+      <button class="button">
         <p class="access">&emsp;
           <img src="https://i.ibb.co/B330Wrg/right-arrow.png" border="0" width="50" height="50" class="plus"> &nbsp;
           <img src="https://i.ibb.co/XYS5SSF/text2image-P2673154-20210708-32638.png" border="0" width="150" height="50"> &emsp;
