--- a/express-todo/lobby/assetslobby.ejs
+++ b/express-todo/lobby/assetslobby.ejs
@@ -3,13 +3,8 @@
   body {
     background-image: url("https://i.ibb.co/0rbfdgF/1920902.jpg");
   }
-  .box {
-    margin-left: 90vh;
-    margin-top: 68vh;
-    width: fit-content;
-  }
-  .box:hover{
-    background-position: right bottom;
+  
+  .button:hover{
     transition: transform 1s ease;
     color: #fff;
     box-shadow: 3px 3px 20px #eee;
@@ -18,16 +13,14 @@
   }
  
   .button{
+    margin-left: 90vh;
+    margin-top: 67vh;
+    width: fit-content;
     border: 0;
     border-radius:  40px;
     display: flexbox;
     flex-direction: column;
     flex-wrap: nowrap;
   } 
-
-  .access {
-    display: flexbox;
-    vertical-align: middle;
-  }
 
 </style>
