--- a/express-todo/lobby/lobby.ejs
+++ b/express-todo/lobby/lobby.ejs
@@ -5,12 +5,13 @@
     <%- include("assetslobby.ejs") %>
   </head>
   <body>
+    <form action="/redirect" method="POST">
       <button class="button">
         <p class="access">&emsp;
           <img src="https://i.ibb.co/B330Wrg/right-arrow.png" border="0" width="50" height="50" class="plus"> &nbsp;
           <img src="https://i.ibb.co/XYS5SSF/text2image-P2673154-20210708-32638.png" border="0" width="150" height="50"> &emsp;
       </p>
-      </button> 
+      </button>
     </form>
   </body>
 </html>
