--- a/express-todo/views/todocss.ejs
+++ b/express-todo/views/todocss.ejs
@@ -1,6 +1,61 @@
 <style>
   body {
-    background-image: url("https://i.ibb.co/0rbfdgF/1920902.jpg");
+    background-image: url("https://i.ibb.co/x3rdVNf/PQHZ6h.jpg");
+    background-position: right bottom;
     color: white;
   }
+  ul {
+    background-color: rgb(13, 23, 56);
+    display: inline-block;
+    padding: 20px 40px;
+    margin-left: 40px;
+    margin-top: 20px;
+  }
+  h1{
+    margin-left: 115px;
+    color: rgb(111, 202, 255);
+  }
+  input {
+    width: 300px;
+    height: auto, 50px;
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 140%;
+    border-radius: 10px;
+    border: none;
+    padding-left: 10px;
+  }
+  input:focus {
+    outline: none;
+  }
+  .addTask {
+    margin-top: 3%;
+    width: 200px;
+    height: fit-content;
+    border: 0px;
+    vertical-align: middle;
+    line-height: 5px;
+    border-radius: 40px;
+    margin-left: 50px;
+    position: relative;
+    transition: transform .5s ease-in-out, background-color .5s ease-in-out
+  }
+  .addTask:hover {
+    transition:transform .5s ease-in-out, background-color .5s ease-in-out;
+    /* transition: box-shadow 1s ease-in-out; */
+    transform: translateY(-3px);
+    border-radius: 40px;
+    background-color: rgb(185, 111, 255);
+  }
+  .plus {
+    margin-top: 10px;
+  }
+  h2 {
+    width: fit-content;
+    display: inline-block;
+    position: relative;
+    bottom: 15px;
+  }
+  
+
 </style>
