--- a/express-todo/views/todocss.ejs
+++ b/express-todo/views/todocss.ejs
@@ -15,7 +15,7 @@
     margin-left: 115px;
     color: rgb(111, 202, 255);
   }
-  input {
+  .addform input {
     width: 300px;
     height: auto, 50px;
     display: inline-block;
@@ -43,7 +43,7 @@
   .addTask:hover {
     transition:transform .5s ease-in-out, background-color .5s ease-in-out;
     /* transition: box-shadow 1s ease-in-out; */
-    transform: translateY(-3px);
+    transform: translateY(-1px);
     border-radius: 40px;
     background-color: rgb(185, 111, 255);
   }
@@ -57,5 +57,23 @@
     bottom: 15px;
   }
   
+  .table {
+    margin-left: 30px;
+    background-color: rgb(37, 156, 97);
+    border-color: black;
+    border-spacing: 0px;
+  }
 
+  th {
+    padding: 5px 50px;
+    align-content: center;
+  }
+  td {
+    padding: 3px 5px;
+  }
+  .checkbox {
+    align-items: center;
+    text-align: center;
+    vertical-align: middle;
+  }
 </style>
