--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Lobby of Todo</title>
+    <title> &ensp; Lobby of Todo</title>
     <link rel="icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
     <%- include('todocss.ejs'); %>
   </head>
@@ -8,14 +8,14 @@
     <ul>
       <h1> Todo </h1>
 
-      <form action="" method="POST" class="addForm">
+      <form action="/Todo" method="POST" class="addForm">
 
         <div class="name">
-          <input type="text" name="name" id="textName" placeholder="task name" required>
+          <input type="text" name="name" id="name" placeholder="&nbsp; task name" required>
         </div>
 
         <div class="description">
-          <input type="text" name="description" id="description" placeholder="description (optional)">
+          <input type="text" name="description" id="description" placeholder="&nbsp; description (optional)">
         </div>
 
         <button type="submit" id="addTask" class="addTask">
@@ -26,9 +26,31 @@
         
       </form>
     </ul>
-    <table>
-      
+    <table border='1' class='table'>
+      <thead>
+        <th></th>
+        <th>name</th>
+        <th>description</th>
+        <th>checked?</th>
+      </thead>
+      <tbody>
+        <% tasks.forEach(task => { %>
+          <tr>
+            <td class="checkbox">
+              <form action="/Todo/<% task.id %>" method="POST">
+                <input type="checkbox" name="checkbox" value="checked" <%= task.done ? 'checked=checked' : '' %> onChange="this.form.submit()">
+              </form>
+            </td>
+            <td><%= task.name %></td>
+            <td><%= task.description %></td>
+            <td><%= task.done %> </td>
+          </tr>
+        <% }) %>
+      </tbody>
     </table>
-
+    
+    <script>
+    </script> 
+    
   </body>
 </html>
