--- a/express-todo/views/todocss.ejs
+++ b/express-todo/views/todocss.ejs
@@ -76,4 +76,12 @@
     text-align: center;
     vertical-align: middle;
   }
+  .true {
+    color: #000;
+    background-color: #00ffaa;
+  }
+  .false {
+    color: #000;
+    background-color: #ff0000;
+  }
 </style>
