changed the response on click
I changed the response of clicking the checkbox from saying "hi" to changing the color of the box

--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -43,7 +43,7 @@
             </td>
             <td><%= task.name %></td>
             <td><%= task.description %></td>
-            <td><%= task.done %> </td>
+            <td class="<%= task.done ? 'true' : 'false' %> "><%= task.done ? 'finished' : 'unfinished' %> </td>
           </tr>
         <% }) %>
       </tbody>
