--- a/express-todo/views/todocss.ejs
+++ b/express-todo/views/todocss.ejs
@@ -59,7 +59,7 @@
   
   .table {
     margin-left: 30px;
-    background-color: rgb(37, 156, 97);
+    background-color: rgb(119, 119, 119);
     border-color: black;
     border-spacing: 0px;
   }
@@ -75,5 +75,13 @@
     align-items: center;
     text-align: center;
     vertical-align: middle;
+  }
+  .true {
+    color: black;
+    background-color: #00ffaa;
+  }
+  .false {
+    color: black;
+    background-color: red;
   }
 </style>
