--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -43,14 +43,10 @@
             </td>
             <td><%= task.name %></td>
             <td><%= task.description %></td>
-            <td><%= task.done %> </td>
+            <td class="<%= task.done ? 'true' : false %> "><%= task.done ? 'finished' : 'unfinished' %></td>
           </tr>
         <% }) %>
       </tbody>
     </table>
-    
-    <script>
-    </script> 
-    
   </body>
 </html>
