--- a/express-todo/views/todocss.ejs
+++ b/express-todo/views/todocss.ejs
@@ -76,11 +76,11 @@
     text-align: center;
     vertical-align: middle;
   }
-  .true {
+  .checked {
     color: #000;
     background-color: #00ffaa;
   }
-  .false {
+  .unchecked {
     color: #000;
     background-color: #ff0000;
   }
