--- a/express-todo/views/lobby.ejs
+++ b/express-todo/views/lobby.ejs
@@ -2,14 +2,14 @@
   <head>
     <title>Lobby for Todo</title>
     <link rel = "icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
-    <%- include("assetslobby.ejs") %>
+    <link rel="stylesheet" href="static/lobby.css">
   </head>
   <body>
-    <form action="/redirect" method="POST">
+    <form action="/login" method="GET">
       <button class="button">
         <p class="access">&emsp;
           <img src="https://i.ibb.co/B330Wrg/right-arrow.png" border="0" width="50" height="50" class="plus"> &nbsp;
-          <img src="https://i.ibb.co/XYS5SSF/text2image-P2673154-20210708-32638.png" border="0" width="150" height="50"> &emsp;
+           log into your todo list  &emsp;
       </p>
       </button>
     </form>
