--- a/express-todo/views/signup.ejs
+++ b/express-todo/views/signup.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="static/signup.css">
   </head>
   <body>
-    <form class="box" action="signup" method="get">
+    <form class="box" action="/signup" method="get">
       <h1>Sign up</h1>
       <input type="text" name="username" placeholder="&nbsp; username">
       <input type="text" name="email" placeholder="&nbsp; email">
