--- a/express-todo/views/login.ejs
+++ b/express-todo/views/login.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="static/login.css">
   </head>
   <body>
-    <form class="box" action="login" method="get">
+    <form class="box" action="/login" method="get">
       <h1>Log in</h1>
       <input type="text" name="username" placeholder="&nbsp; username">
       <input type="password" name="password" placeholder="&nbsp; password">
