added login and changed schema
added login and changed schema tasks from username to userId

--- a/express-todo/views/signup.ejs
+++ b/express-todo/views/signup.ejs
@@ -7,10 +7,10 @@
   <body>
     <form class="box" action="/signup" method="POST">
       <h1>Sign up</h1>
-      <input type="text" name="username" placeholder="&nbsp; username">
+      <input type="text" name="username" placeholder="&nbsp; username" required>
       <input type="text" name="email" placeholder="&nbsp; email">
-      <input type="password" name="password" placeholder="&nbsp; password">
-      <input type="submit" name="signup" value="Login">
+      <input type="password" name="password" placeholder="&nbsp; password" required>
+      <input type="submit" name="signup" value="Sign up">
     </form>
   </body>
 </html>
