--- a/express-todo/public/login.css
+++ b/express-todo/public/login.css
@@ -11,13 +11,14 @@ body {
 .box {
   width: 300px;
   height: 300px;
-  background-color: 191919;
+  background-color: #191919;
   padding: 40px;
   top: 50%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   text-align: center;
+  box-shadow: 3px 3px 5px #212e3b;
 }
 
 form {
@@ -47,7 +48,7 @@ input {
 
 .box input[type = "text"]:hover,.box input[type = "password"]:hover {
   width: 210px;
-  border:2px solid #ff00aa;
+  border:2px solid #7722ff;
 }
 
 .box input[type = "submit"] {
