--- a/express-todo/public/signup.css
+++ b/express-todo/public/signup.css
@@ -18,6 +18,7 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
   text-align: center;
+  box-shadow: 3px 3px 5px #212e3b;
 }
 
 h1 {
@@ -52,7 +53,7 @@ input {
 }
 
 .box input[type = "text"]:focus,.box input[type = "password"]:focus {
-  border:2px solid #ff00aa;
+  border:2px solid #7722ff;
   transition: border 1s ease-in-out;
 }
 
