--- a/express-todo/views/login.ejs
+++ b/express-todo/views/login.ejs
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="static/login.css">
   </head>
   <body>
-    <form class="box" action="/login" method="get">
+    <form class="box" action="/login" method="POST">
       <h1>Log in</h1>
-      <input type="text" name="username" placeholder="&nbsp; username">
-      <input type="password" name="password" placeholder="&nbsp; password">
+      <input type="text" name="username" placeholder="&nbsp; username" required>
+      <input type="password" name="password" placeholder="&nbsp; password" required>
       <input type="submit" name="login" value="Login">
       <p>
         Don't have an account? &nbsp;
