--- a/express-todo/public/login.css
+++ b/express-todo/public/login.css
@@ -9,12 +9,12 @@ body {
 }
 
 .box {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: fit-content;
   background-color: #191919;
-  padding: 40px;
   top: 50%;
   left: 50%;
+  padding: 40px;
   position: absolute;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -69,6 +69,23 @@ input {
 .box input[type = "submit"]:hover {
   background-color: #00aeff;
 }
+
 a {
   color: #00aeff;
 }
+
+#error {
+  color: rgb(140, 0, 0);
+  line-height: 0px;
+}
+
+.visible {
+  visibility: visible;
+  display: inline-block;
+}
+
+.invisible {
+  visibility: hidden;
+  display: none;
+}
+
