--- a/express-todo/views/todo.ejs
+++ b/express-todo/views/todo.ejs
@@ -1,10 +1,15 @@
 <html>
   <head>
-    <title> &ensp; Lobby of todo</title>
+    <title> &ensp; Todo </title>
     <link rel="icon" href="https://i.ibb.co/TTfdZpc/plus.png" type="image/png">
-    <link rel="stylesheet" href="static/todo.css"
+    <link rel="stylesheet" href="static/todo.css">
   </head>
   <body>
+    <header>
+      <div>
+        <%= userInfo.username %> 
+      </div>
+    </header>
     <ul>
       <h1> todo </h1>
 
