--- a/express-todo/public/lobby.css
+++ b/express-todo/public/lobby.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://i.ibb.co/0rbfdgF/1920902.jpg");
+  background-image: url("../static/pictures/1920902.jpg");
   background-position: top left;
   background-repeat: no-repeat;
   background-size: cover;
