--- a/react-test/src/ressources/Lobby.css
+++ b/react-test/src/ressources/Lobby.css
@@ -2,7 +2,7 @@
   height: 100vh;
   background-image: url('./thumb-1920-742320.png');
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: top left;
   background-size: cover;
   font-family: Quicksand;
 }
