--- a/react-test/src/ressources/Lobby.css
+++ b/react-test/src/ressources/Lobby.css
@@ -14,37 +14,33 @@
 
 .header {
   background-color: #000;
-  height: 60px;
+  height: 10vh;
   width: 100%;
   vertical-align: middle;
   margin: 0;
   padding: 0;
+  min-height: 60px;
 }
 
-.header div {
+.headerBtn button{
   display: block;
   color: #fff;
   float: right;
-  height: 100%;
-  line-height: 60px;
-}
-
-.header button {
-  display: block;
-  height: 100%;
-  line-height: 60px;
+  height: 10vh;
+  min-height: 60px;
+  line-height: 10vh;
   width: 100px;
   background-color: #000;
   transition: background-color 0.25s;
   font-size: 100%;
 }
 
-.header button:hover {
+.headerBtn button:hover {
   background-color:rgb(30, 30, 30);
   transition: background-color 0.25s;
 }
 
-.profile {
+.profileBtn {
   border-left: 1px solid #fff;
   padding-right: 50px;
   padding-left: 50px;
@@ -68,7 +64,61 @@
   color: #fff;
   outline: none;
   border: none;
+  border-left: 1px solid #fff; 
 }
 
+.profileHeader {
+  float: right;
+}
 
+.profileBtn {
+  display: block;
+  float: right;
+  color: #fff;
+  height: 10vh;
+  min-height: 60px;
+  line-height: 10vh;
+  font-size: 100%;
+  border-left: 1px solid #fff;
+  padding-right: 5vw;
+  padding-left: 5vw;
+  background-color: black;
+  outline: none;
+  border: none;
+  transition: background-color 0.25s;
+  border-left: 1px solid #fff;
+}
 
+.profileBtn:hover {
+  background-color:rgb(30, 30, 30);
+  transition: background-color 0.25s;
+  cursor: pointer;
+}
+
+.profile {
+  margin-right: 7%;
+  visibility: hidden;
+}
+
+.profile a {
+  width: 90%;
+  float: right;
+  text-align: center;
+  background-image: linear-gradient(315deg, rgb(46, 46, 46), rgb(46, 46, 46), rgb(90, 175, 200));
+  background-size: 500%;
+  background-position: center right;
+  color: #fff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: background-position 0.25s ease-in-out;
+}
+
+.profile a:hover {
+  background-position: center left;
+  transition: background-position 0.25s ease-in-out;
+  cursor: pointer;
+}
+
+.show {
+  visibility: visible;
+}
