--- a/react-test/src/ressources/todo-list.css
+++ b/react-test/src/ressources/todo-list.css
@@ -3,17 +3,66 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 90vh;
   margin-top: 0px;
-  color: white;
+  color: white; 
+}
+
+.todoContent {
+  padding-bottom: 5%;
+  width: 1px;
 }
 
 .title {
   margin-top: 0px;
+  margin-left: 10%;
 }
 
-.table {
+.addTaskForm {
+  margin-top: 0px;
+  margin-left: 30px;
+}
+
+.addTaskForm input {
+  outline: none;
+}
+
+.submitButton:hover {
+  cursor: pointer;
+}
+
+#allTasks {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.theTable {
   display: inline-block;
-  width: 50%;
+  width: fit-content;
+  border-color: white;
+  border-spacing: 0px;
+}
+
+td {
+  padding: 5px 20px;
+}
+
+.checkbox {
+  margin-left: 50%;
+  transform: translateX(-50%)
+}
+
+.removeTask {
+  border-radius: 40px;
+  border: none;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
+  transition: background-color 0.25s ease-in-out;
+}
+
+.removeTask:hover {
+  background-color: crimson;
+  transition: background-color 0.25s ease-in-out;
 }
