--- a/react-test/src/ressources/Lobby.css
+++ b/react-test/src/ressources/Lobby.css
@@ -38,6 +38,7 @@
 .headerBtn button:hover {
   background-color:rgb(30, 30, 30);
   transition: background-color 0.25s;
+  cursor: pointer;
 }
 
 .profileBtn {
