--- a/react-test/src/ressources/login-signup.css
+++ b/react-test/src/ressources/login-signup.css
@@ -4,7 +4,7 @@
   background-color: rgb(0, 50, 78);
   color: aliceblue;
   text-align: center;
-  margin-top: 40vh;
+  margin-top: max(300px, 40vh);
   margin-left: 25vw;
   position: absolute;
   border: 10px solid black;
@@ -14,14 +14,16 @@
 
 .formContent {
   position: relative;
-  margin: 50% 100px;
+  margin: 50% 0;
   transform: translateY(-50%);
   padding: 0px;
 }
 
 .formInput {
   margin-top: 10px;
-  border: 1px solid aqua;
+  margin-left: 20%;
+  margin-right: 20%;
+  border: 1px solid orangered;
   border-radius: 400px;
   outline: none;
   text-align: center;
@@ -34,6 +36,12 @@
   margin-left: 0px;
 }
 
+.wrongAccount {
+  margin: 10px 0;
+  color: brown;
+  display: none;
+}
+
 .submit {
   width: 90px;
   height: 30px;
@@ -44,10 +52,11 @@
   text-align: center;
   background-color: transparent;
   color: white;
+  transition: background-color 0.35s ease-in-out;
 }
 
 .submit:hover {
   background-color: aquamarine;
-  transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.35s ease-in-out;
   cursor: pointer;
 }
